THRIFT-5569: add negative size checks in Go generator when reading maps, sets and lists

Client: go